# haskell-parse-stlc

./: .gitignore  ChangeLog.md  LICENSE  README.md  example.lambda  example2.lambda  haskell-parse-stlc.cabal  package.yaml  parse-stlc.cabal  stlc-mod-isom.cabal
app/: Main.hs
ex/: example11.stlc  example5.stlc  example6.stlc  example7.stlc  example8.stlc  example9.stlc
examples/: example1.stlc  example2.stlc  example3.stlc  example4.stlc
examples/tests/: example10.stlc  example12.stlc  example3.stlc  example4.stlc  example6.stlc  example9.stlc
src/: LambdaTerm.hs  Lib.hs  Metar.hs  ParseSTLC.hs  ParsingCommon.hs  STLCmodIsom.hs  TypeCheck.hs  TypeCheckIsom (copy).hs  TypeCheckIsom.hs  TypeTerm.hs  TypingCommon.hs  TypingContext.hs
